tests/paczka1/fuzzy1/80576401.err
Error in line 3: A377 S313 4,2
Error in line 4: D4TWJ S342 57,6
Error in line 17: Nwab2Xv7Wp7 A377 2,2
Error in line 13: D4TWJ S342 89,1
Error in line 23: D4TWJ A377 65,6
